--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Cadastro de Paises</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 	<h3>Cadastro de Paises</h3>
@@ -18,5 +19,7 @@
 			Área: <input class="form-control" type="number" name="area"><br> <input type="submit">
 		</div>
 	</form>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
